Fix - Some elements no longer show scrollbars
Fixed elements with position relative/sticky/absolute displaying a scrollbar when adding react-router.
Fixed body margin defaulting to 8px
Fixed magnifying glass icon not displaying correctly

--- a/root/frontend/src/App.css
+++ b/root/frontend/src/App.css
@@ -1,5 +1,6 @@
 body {
   min-width: 600px;
+  margin: 0;
 }
 
 .app-container {
