--- a/root/frontend/src/components/SearchResultsView/SearchResultsView.css
+++ b/root/frontend/src/components/SearchResultsView/SearchResultsView.css
@@ -4,9 +4,6 @@
     top: 0;
     right: 0;
     left: 0;
-    margin-top: -50px;
-    margin-left: -8px;
-    margin-right: -8px;
     height: 15vh;
     /* max-height: 100px; */
     display: flex;
@@ -29,11 +26,9 @@
 }
 .icon {
     position: absolute;
-    padding: 10px;
     min-width: 40px;
-    left: -16px;
-    top:-8px
-    /* z-index: 1000; */
+    left: -5px;
+    top:3px
 }
 .srv-sort {
     align-self: flex-end;
@@ -70,6 +65,7 @@
 }
 .centre.inner-wrapper {
     position:relative;
+    display:flex;
 }
 .srv-top-button {
     position: fixed;
