--- a/root/frontend/src/components/TileItem/TileItem.css
+++ b/root/frontend/src/components/TileItem/TileItem.css
@@ -34,6 +34,7 @@
   height: 130px;
   width: 100%;
   position: relative;
+  overflow:hidden;
 }
 
 img {
